@startuml

title __CONTOROLLERS's Class Diagram__\n

  namespace jp.ac.shibaura.it.ie {
    namespace contorollers {
      class jp.ac.shibaura.it.ie.contorollers.ChatController {
          + exit()
          + messagePost()
          + messageUpdate()
          + stampPost()
      }
    }
  }
  

  namespace jp.ac.shibaura.it.ie {
    namespace contorollers {
      class jp.ac.shibaura.it.ie.contorollers.RoomController {
          + roomJoin()
      }
    }
  }
  

  jp.ac.shibaura.it.ie.contorollers.ChatController o-- jp.ac.shibaura.it.ie.domain.application.chat.ChatExitInteractor : chatExitInteractor
  jp.ac.shibaura.it.ie.contorollers.ChatController o-- jp.ac.shibaura.it.ie.domain.application.chat.message.ChatMessagePostInteractor : chatMessagePostInteractor
  jp.ac.shibaura.it.ie.contorollers.ChatController o-- jp.ac.shibaura.it.ie.domain.application.chat.message.ChatMessageUpdateInteractor : chatMessageUpdateInteractor
  jp.ac.shibaura.it.ie.contorollers.ChatController o-- jp.ac.shibaura.it.ie.domain.application.chat.stamp.ChatStampPostInteractor : chatStampPostInteractor
  jp.ac.shibaura.it.ie.contorollers.ChatController o-- jp.ac.shibaura.it.ie.log.LogUtils : logger
  jp.ac.shibaura.it.ie.contorollers.ChatController o-- jp.ac.shibaura.it.ie.domain.application.session.SessionInteractor : sessionInteractor
  jp.ac.shibaura.it.ie.contorollers.RoomController o-- jp.ac.shibaura.it.ie.log.LogUtils : logger
  jp.ac.shibaura.it.ie.contorollers.RoomController o-- jp.ac.shibaura.it.ie.domain.application.room.RoomStartInteractor : roomStartInteractor
  jp.ac.shibaura.it.ie.contorollers.RoomController o-- jp.ac.shibaura.it.ie.domain.application.session.SessionInteractor : sessionInteractor


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
